2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* Services/ILoggingService.cs: Update the LogAppendedArgs and remove the
	category.
	* Services/DefaultLoggingService.cs: Remove the need for the StackTrace.
	We dont really need that in depth of information currently. Will look to
	find this feature directly in log4net and update soon.

2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* Commands/VBConverter/ConvertBuffer.cs: Convert to use new Logging
	framework.
	* Commands/MenuItemBuilders.cs
	* Commands/AutostartCommands.cs
	* Services/DefaultLoggingService.cs
	* Services/DispatchService/DispatchService.cs
	* Services/ILoggingService.cs: New logging service to help make debugging
	and information logging easy.
	* Services/Runtime.cs: Add logging service to Runtime.
	* Services/DisplayBinding/DisplayBindingService.cs: Convert to new Logging
	framework.
	* Services/ResourceService.cs
	* Services/ParserService/DefaultParserService.cs
	* Services/ParserService/AssemblyInformation.cs
	* Services/ParserService/AssemblyCodeCompletionDatabase.cs
	* Services/ParserService/CodeCompletionDatabase.cs
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs
	* Gui/Workbench/DefaultWorkbench.cs
	* Gui/Dialogs/Wizard/WizardDialog.cs
	* Gui/Dialogs/Wizard/AbstractWizardPanel.cs
	* Gui/Dialogs/WordCountDialog.cs
	* Gui/Dialogs/NewFileDialog.cs
	* Gui/Dialogs/ReferenceDialog/AssemblyReferencePanel.cs
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs
	* Gui/Pads/SolutionPad/TreeViewPad.cs
	* Gui/Pads/PropertyPad/PropertyPad.cs
	* Gui/Pads/ProjectBrowser/BrowserNode/ProjectBrowserNode.cs
	* Gui/Pads/ProjectBrowser/BrowserNode/DirectoryNode.cs
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs
	* Gui/Pads/HelpBrowser/MonodocTreePad.cs
	* Gui/Pads/HelpBrowser/HelpViewer.cs
	* Gui/Pads/FileScout/FileList.cs
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs
	* Gui/HtmlControl/HtmlControl.cs
	* Gui/HtmlControl/MozillaControl.cs